# gitloom

./: LICENSE  README.md  pyproject.toml  setup.py
gitloom/: gitloom.py
tests/: run_all_tests.sh  test1_base_multiple.sh  test2_base_existing.sh  test3_chat_new.sh  test4_chat_existing.sh
