[project]
name = "gitloom"
version = "0.1.0"
description = "cli loom that uses git to manage branches"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
    { name="socketteer", email="moire@generative.ink" },
]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "anthropic>=0.42",
    "gitpython>=3.1",
    "jsonlines>=4.0",
]

[project.scripts]
gitloom = "gitloom.gitloom:main"

[project.urls]
repository = "https://github.com/socketteer/gitloom"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
